<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/general_padding"
    android:paddingTop="@dimen/general_padding"
    android:paddingRight="@dimen/general_padding"
    android:paddingBottom="@dimen/general_padding"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="@dimen/header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/general_padding"
        android:paddingBottom="@dimen/general_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding"
            android:text="@string/email_label"
            android:textSize="@dimen/regular_text_size" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/regular_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/general_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingEnd="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding"
            android:text="@string/password_label"
            android:textSize="@dimen/regular_text_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/regular_text_size" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/general_padding">

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/general_padding"
            android:layout_marginRight="@dimen/general_padding"
            android:layout_weight="1"
            android:onClick="login"
            android:text="@string/login_text"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/registerButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_padding"
            android:layout_marginRight="@dimen/general_padding"
            android:layout_weight="1"
            android:onClick="register"
            android:text="@string/register_text"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetPassword"
        android:text="@string/reset_password"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>